Added signature pad

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <form id="borang" action="http://uakk5d43ad00.akmalirfan.koding.io/xwalk-halal/laporan.php" method="post">
         <script src="task.js"></script>
+        <script src="draw.js"></script>
     </form>
 </body>
 </html>
