--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <link href="css/style.css" rel="stylesheet" />
 </head>
 <body>
-    <form id="borang" action="http://uakk5d43ad00.akmalirfan.koding.io/xwalk-halal/laporan.php" method="post">
-        <script src="task.js"></script>
-        <script src="draw.js"></script>
+    <form id="borang" action="http://uakk5d43ad00.akmalirfan.koding.io/xwalk-halal/serverside/laporan.php" method="post">
+        <script src="js/task.js"></script>
+        <script src="js/draw.js"></script>
     </form>
 </body>
 </html>
