--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no, width=device-width">
-    <title>Task</title>
+    <title>Audit</title>
     <link href="css/style.css" rel="stylesheet" />
 </head>
 <body>
