--- a/index.html
+++ b/index.html
@@ -1,15 +1,129 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no, width=device-width">
     <title>Audit</title>
+    <link rel="shortcut icon" type="image/png" href="img/icon.png"/>
     <link href="css/style.css" rel="stylesheet" />
+    
+    <style type="text/css">
+        body {
+            background: #222;
+        }
+        .navigation {
+            width: 100%;
+            /*height: 100%;*/
+            position: absolute;
+            margin: 0;
+            top: 0;
+            /*right: 0;
+            bottom: 0;*/
+            left: -10;
+            z-index: 0;
+        }
+        .nav-item {
+            color: #aaa;
+            display: block;
+            padding: 15px 0 15px 30px;
+            border-top: 1px solid #333;
+            border-bottom: 1px solid #000;
+            text-decoration: none;
+        }
+        .nav-item:hover {
+            background: #333;
+        }
+        .nav-item:active {
+            background: #101010;
+        }
+        .site-wrap {
+            position: absolute;
+            width: 100%;
+            top: 0;
+            bottom: 0;
+            left: 0;
+            z-index: 1;
+            /*background-image: linear-gradient(135deg, 
+                              rgb(254,255,255) 0%,
+                              rgb(221,241,249) 35%,
+                              rgb(160,216,239) 100%);*/
+            /*background-size: 200%;*/
+        }
+        #bg {
+            position: fixed;
+            background-color: #eee;
+        }
+        #overlay {
+            position: fixed;
+            background-color: #000;
+            opacity: 0;
+            z-index: -1;
+        }
+        .nav-trigger {
+            display: none;
+        }
+        label[for="nav-trigger"] {
+            position: fixed;
+            top: 9px;
+            left: 12px;
+            z-index: 2;
+            width: 20px;
+            height: 20px;
+            cursor: pointer;
+            background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' version='1.1' x='0px' y='0px' width='30px' height='30px' viewBox='0 0 30 30' enable-background='new 0 0 30 30' xml:space='preserve'><rect width='30' height='6'/><rect y='24' width='30' height='6'/><rect y='12' width='30' height='6'/></svg>");
+            background-size: contain;
+        }
+        .nav-trigger:checked + label {
+            left: 212px;
+        }
+
+        .nav-trigger:checked ~ .site-wrap,
+        .nav-trigger:checked ~ header
+        {
+            left: 200px;
+        }
+        .nav-trigger:checked ~ #bg {
+            box-shadow: 0 0 5px 5px rgba(0,0,0,0.5);
+        }
+        .nav-trigger:checked ~ #overlay {
+            z-index: 1;
+            opacity: 0.3;
+        }
+        .nav-trigger + label, .site-wrap {
+            transition: 0.2s;
+        }
+        body {
+            padding: 0;
+            margin: 0;
+            overflow-x: hidden;
+        }
+        .navigation label
+        {
+            display: block;
+            float: none;
+        }
+        input[name="nav"]:checked + .nav-item
+        {
+            background: #111;
+        }
+    </style>
 </head>
 <body>
-    <form id="borang" action="http://uakk5d43ad00.akmalirfan.koding.io/xwalk-halal/serverside/laporan.php" method="post">
+    <div id="navdiv" class="navigation"></div>
+
+    <input type="checkbox" id="nav-trigger" class="nav-trigger" />
+    <label for="nav-trigger"></label>
+    <div id="bg" class="site-wrap"></div>
+    <form class="site-wrap" id="borang" action="http://uakk5d43ad00.akmalirfan.koding.io/xwalk-halal/serverside/laporan.php" method="post">
         <script src="js/task.js"></script>
         <script src="js/draw.js"></script>
     </form>
+    <div id="overlay" class="site-wrap"></div>
+    
+    <script type="text/javascript">
+        document.getElementById('overlay').addEventListener('click', function() {
+            document.getElementById('nav-trigger').checked = false;
+        });
+    </script>
 </body>
 </html>
