Add mobile-wep-app-capable meta tag

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no, width=device-width">
+    <meta name="mobile-web-app-capable" content="yes"/>
     <title>Audit</title>
     <link rel="shortcut icon" type="image/png" href="img/icon.png"/>
     <link href="css/style.css" rel="stylesheet" />
